# aruaru

./: .gitignore  LICENSE  README.md
aruaru_v28/: ARUARU_AI_API_KEY_HANDOFF.md  ARUARU_AI_CAR_TOP100.md  ARUARU_AI_DAILY_LANGUAGE_UPDATE_JOB.md  ARUARU_AI_DEVELOPMENT_MENU.md  ARUARU_AI_INSURANCE_TOP100.md  ARUARU_AI_PROGRAMMING_LANGUAGE_INFO.md  ARUARU_AI_README_OUTPUT_MENU.md  ARUARU_AI_TOP100_PROGRAMMING_LANGUAGES.md  ARUARU_DESKTOP_AUTO_BUGCHECK.md  ARUARU_DESKTOP_COPY_SCRIPT_GENERATOR.md  ARUARU_DESKTOP_LLM_BUGCHECK.md  ARUARU_LLM_DEEPSEEK_FOLDING.md  ARUARU_LLM_FOLDING_SBM_CONTINUAL_LEARNING.md  ARUARU_LLM_HYBRID_FOLDING_SBM_THEORY.md  ARUARU_LLM_NEXT_HYBRID_THEORY.md  ARUARU_LLM_TOSHIBA_QUASI_QUANTUM_NEXT.md  ARUARU_LLM_TOSHIBA_SBM_ENGINE.md  ARUARU_OPENCUDA_035_REFERENCE_INTEGRATION.md  ARUARU_OPENCUDA_CORE_SOURCE_REVIEW.md  ARUARU_OPENCUDA_EXAMPLES_TOOLS_REVIEW.md  ARUARU_OPENCUDA_ILUMI_MULTI_DEVICE_PLATFORM.md  ARUARU_VOLUNTEER_GT730_CONTEXT.md  ARUARU_WEB_DESKTOP_SCRIPT_GENERATOR.md  BUG_CHECKLIST_GT730.md  COMPILE_STATUS.md  Cargo.toml  DOWNLOAD_CONTENTS.md  README.md  ROADMAP.md  RUN_CHECK_COMMANDS_WINDOWS.md
aruaru_v28/examples/: README.md
aruaru_v28/scripts/: check-full.ps1  check.ps1  check.sh
aruaru_v28/src/: api_key_handoff.rs  aruaru_llm_learning.rs  business_top100.rs  car_top100.rs  config.rs  copy_script_generator.rs  dashboard.rs  development_menu.rs  generator.rs  hybrid_theory.rs  insurance_top100.rs  language_top100.rs  language_update_job.rs  llm_folding.rs  main.rs  manual_script_generator.rs  markdown.rs  opencuda_035_reference.rs  (+7 more)
(+48 files in other folders)
